@@ -40,6 +40,8 @@ public final class Skills {
 		FIGHTER_POWER_GUARD = 1101007,
 
 		COMBO = 1111002,
+		SWORD_PANIC = 1111003,
+		AXE_PANIC = 1111004,
 		SWORD_COMA = 1111005,
 		AXE_COMA = 1111006,
 		ARMOR_CRASH = 1111007,
